--- a/dc_traffic_tickets/templates/404.html
+++ b/dc_traffic_tickets/templates/404.html
@@ -3,7 +3,17 @@
 {% block title %}Page Not found{% endblock %}
 
 {% block content %}
-<h1>Page Not found</h1>
 
-<p>This is not the page you were looking for.</p>
+  <article>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+          <h1>Page Not found</h1>
+
+          <p>This is not the page you were looking for.</p>
+        </div>
+      </div>
+    </div>
+  </article>
+
 {% endblock content %}
