--- a/dc_traffic_tickets/templates/components/footer.html
+++ b/dc_traffic_tickets/templates/components/footer.html
@@ -1,16 +1,13 @@
 <div id="footer">
   <div class="container">
     <div class="row">
-
-      <div class="col-xs-6">
-        <p class="text-right text-muted">
+      <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+        <p class="copyright text-muted">
           <small>
-            NoRights Reserved
-          </small>
-        </p>
-        <p class="text-right text-muted">
-          <small>
-            DC Traffic Data API Status: <span id="footerStatus"></span>
+            <a class="col-xs-3" href="https://www.dctraffictickets.net/legal-notice">Legal Notice</a>
+            <a class="col-xs-3" href="https://www.dctraffictickets.net/privacy-policy">Privacy Policy</a>
+            <a class="col-xs-3" href="https://www.dctraffictickets.net/terms-of-use">Terms of Use</a>
+            <a class="col-xs-3" href="#">No Rights Reserved</a>
           </small>
         </p>
       </div>
