--- a/dc_traffic_tickets/templates/500.html
+++ b/dc_traffic_tickets/templates/500.html
@@ -3,9 +3,17 @@
 {% block title %}Server Error{% endblock %}
 
 {% block content %}
-<h1>Ooops!!! 500</h1>
+  <article>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+          <h1>Ooops!!! 500</h1>
 
-<h3>Looks like something went wrong!</h3>
+          <h3>Looks like something went wrong!</h3>
 
-<p>We track these errors automatically, but if the problem persists feel free to contact us. In the meantime, try refreshing.</p>
+          <p>We track these errors automatically, but if the problem persists feel free to contact us. In the meantime, try refreshing.</p>
+        </div>
+      </div>
+    </div>
+  </article>
 {% endblock content %}
