--- a/dc_traffic_tickets/templates/account/base.html
+++ b/dc_traffic_tickets/templates/account/base.html
@@ -2,9 +2,13 @@
 {% block title %}{% block head_title %}{% endblock head_title %}{% endblock title %}
 
 {% block content %}
-<div class="row">
-  <div class="col-md-6 col-md-offset-3">
-    {% block inner %}{% endblock %}
-  </div>
-</div>
+  <article>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+          {% block inner %}{% endblock %}
+        </div>
+      </div>
+    </div>
+  </article>
 {% endblock %}
