--- a/dc_traffic_tickets/templates/base.html
+++ b/dc_traffic_tickets/templates/base.html
@@ -124,15 +124,7 @@
     <hr>
 
     <!-- Footer -->
-    <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                    <p class="copyright text-muted">Copyright &copy; Nathan Danielsen {% now 'Y' %}</p>
-                </div>
-            </div>
-        </div>
-    </footer>
+  {% include 'components/footer.html' %}
 
 {% block javascript %}
     <!-- jQuery -->
