--- a/dc_traffic_tickets/templates/users/user_detail.html
+++ b/dc_traffic_tickets/templates/users/user_detail.html
@@ -25,42 +25,44 @@
 {% block title %}User: {{ object.username }}{% endblock %}
 
 {% block content %}
-<div class="container">
+<article>
+  <div class="container">
 
-  <div class="row">
-    <div class="col-sm-12">
+    <div class="row">
+      <div class="col-sm-12">
 
-      <h2>{{ object.username }}</h2>
-      {% if object.name %}
-        <p>{{ object.name }}</p>
-      {% endif %}
+        <h2>{{ object.username }}</h2>
+        {% if object.name %}
+          <p>{{ object.name }}</p>
+        {% endif %}
+      </div>
     </div>
-  </div>
 
 {% if object == request.user %}
 <!-- Action buttons -->
-<div class="row">
+    <div class="row">
 
-  <div class="col-sm-12 ">
-    <a class="btn btn-primary" href="{% url 'users:update' %}">My Info</a>
-    <a class="btn btn-primary" href="{% url 'account_email' %}">E-Mail</a>
-    <!-- Your Stuff: Custom user template urls -->
-    {% if request.user.is_staff %}
-      <a class="btn btn-primary" href="{% url 'explorer_playground' %}">SQL Explorer</a>
-      <a class="btn btn-primary" href="{% url 'admin:index' %}">Traffic Admin</a>
-      <a class="btn btn-primary" href="{% url 'wagtailadmin_home' %}">CMS Admin</a>
+      <div class="col-sm-12 ">
+        <a class="btn btn-primary" href="{% url 'users:update' %}">My Info</a>
+        <a class="btn btn-primary" href="{% url 'account_email' %}">E-Mail</a>
+        <!-- Your Stuff: Custom user template urls -->
+        {% if request.user.is_staff %}
+          <a class="btn btn-primary" href="{% url 'explorer_playground' %}">SQL Explorer</a>
+          <a class="btn btn-primary" href="{% url 'admin:index' %}">Traffic Admin</a>
+          <a class="btn btn-primary" href="{% url 'wagtailadmin_home' %}">CMS Admin</a>
 
-    {% endif %}
-    {% if request.user.is_authenticated %}
-      <a class="btn btn-primary" href="{% url 'users:apikey' %}">My Api Key</a>
-      <a class="btn btn-primary" href="{% url 'parkingviolations-list' %}">REST API Explorer</a>
-    {% endif %}
+        {% endif %}
+        {% if request.user.is_authenticated %}
+          <a class="btn btn-primary" href="{% url 'users:apikey' %}">My Api Key</a>
+          <a class="btn btn-primary" href="{% url 'parkingviolations-list' %}">REST API Explorer</a>
+        {% endif %}
+      </div>
+
+    </div>
+  <!-- End Action buttons -->
+  {% endif %}
+
+
   </div>
-
-</div>
-<!-- End Action buttons -->
-{% endif %}
-
-
-</div>
+  </article>
 {% endblock content %}
