--- a/dc_traffic_tickets/templates/users/user_form.html
+++ b/dc_traffic_tickets/templates/users/user_form.html
@@ -4,14 +4,24 @@
 {% block title %}{{ user.username }}{% endblock %}
 
 {% block content %}
-    <h1>{{ user.username }}</h1>
-    <form class="form-horizontal" method="post" action="{% url 'users:update' %}">
-        {% csrf_token %}
-        {{ form|crispy }}
-        <div class="control-group">
-          <div class="controls">
-            <button type="submit" class="btn">Update</button>
-          </div>
+  <article>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+
+          <h1>{{ user.username }}</h1>
+          <form class="form-horizontal" method="post" action="{% url 'users:update' %}">
+              {% csrf_token %}
+              {{ form|crispy }}
+              <div class="control-group">
+                <div class="controls">
+                  <button type="submit" class="btn">Update</button>
+                </div>
+              </div>
+          </form>
         </div>
-    </form>
+      </div>
+    </div>
+  </article>
+
 {% endblock %}
